# cybersecurity

./: README.md
Scorpion/src/: scorpion.py
Spider/: Makefile  README.md
Spider/docker/: Dockerfile
Spider/src/: main.c  spider.py
ft_onion/: Makefile  compose.yaml
ft_onion/hidden_service/: Dockerfile  dockerfile_entrypoint.sh  nginx.conf  torrc
ft_onion/hidden_service/ssh/: sshd_config
ft_onion/html/: index.html
ft_onion/nginx/: Dockerfile
ft_otp/: ft_otp.py
ft_otp/modules/: ft_hotp.py
ft_otp/src/: ft_otp.py
ft_otp/test/: test_hotp.py
ft_stockholm/: stockholm.py
inquisitor/: CMakeLists.txt  compile_commands.json  docker-compose.yaml  main.cpp  writepcap.cpp
inquisitor/Docker/: Dockerfile
reverse_me/: .gdb_history  test
reverse_me/binary/: .gdb_history
reverse_me/level1/: level1.c
reverse_me/level2/: level2.c
reverse_me/level3/: .gdb_history  assemblyDump  level3.c
